#2 Implement A.1.2. Abstract Test for Requirement Map Response